--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,13 +1,14 @@
-<%-include("header.ejs") %> 
+<%-include("header.ejs") %>
 <div class="container">
-    
-<div class="avatar-div">
-    <img src="imgs/AVT.JPG" width="" alt="my-avt">
+  <div class="avatar-div">
+    <img src="imgs/AVT.JPG" width="" alt="my-avt" />
+  </div>
+  <div class="about-desc">
+    <p>
+      'sup guys, welcome to my personal page, I'm Hai (Daniel), below is my
+      personal info
+    </p>
+  </div>
+
+  <%-include("footer.ejs") %>
 </div>
-<div class="about-desc">
-    <p>'sup guys, welcome to my personal page, I'm Hai (Daniel), below is my personal info</p>
-</div>
-
-
-
-<%-include("footer.ejs") %> 
