--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,18 +1,23 @@
-<%- include("header.ejs") %> 
+<%- include("header.ejs") %>
 
-    <div class="greeting">
-        <h3>Compose session</h3>
-    </div>
+<div class="greeting">
+  <h3>Compose session</h3>
+</div>
 
-    <form action="/compose" method="post">
-        <label for="">Title:</label>
-        <input type="text" name="title" placeholder="Title">
-        <label for="">Content:</label>
-        <textarea rows="13" cols="" name="content" placeholder="Content" autocomplete="off"></textarea>
-        <button type="submit">Submit</button>
-    </form>
+<form action="/compose" method="post">
+  <label for="">Title:</label>
+  <input type="text" name="title" placeholder="Title" />
+  <label for="">Content:</label>
+  <textarea
+    rows="13"
+    cols=""
+    name="content"
+    placeholder="Content"
+    autocomplete="off"
+  ></textarea>
+  <button type="submit">Submit</button>
+</form>
 
-    <script src="scripts/compose.js"></script>
+<script src="scripts/compose.js"></script>
 
-
-<%- include("footer.ejs") %> 
+<%- include("footer.ejs") %>
