--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -1,19 +1,14 @@
-<%- include("header.ejs") %> 
+<%- include("header.ejs") %>
 <div class="container">
-
-<div class="container-fluid post-full-page">
+  <div class="container-fluid post-full-page">
     <div class="post-full-page-title">
-        <h1> <%= title %> </h1>
+      <h1><%= title %></h1>
     </div>
 
     <div class="post-full-page-content">
-        <p><%= content %> </p>
+      <p><%= content %></p>
     </div>
-    
+  </div>
+
+  <%- include("footer.ejs") %>
 </div>
-
-
-
-
-
-<%- include("footer.ejs") %> 
